--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* #react-multiple-carousel */
+
+.react-multiple-carousel__arrow {
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.react-multiple-carousel__arrow:hover {
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+.react-multiple-carousel__arrow::before {
+  color: black;
+  z-index: 1;
+}
+
+.react-multiple-carousel__arrow--left {
+  left: 2%
+}
+
+.react-multiple-carousel__arrow--right {
+  right: 2%
+}
+
+.react-multi-carousel-dot-list {
+  position: relative;
+}
+
+.react-multi-carousel-dot button {
+  @apply bg-blue-600 border-white
+}
+
+.react-multi-carousel-dot--active button {
+  @apply bg-blue-600 border-blue-600
+}
